type conversion fix